@@ -1,0 +1,28 @@
+---input---
+<?php
+$pipe = popen( "flamegraph.pl --title=\"$title\" > /var/www/html/w/docs/flamegraph.svg", 'w' );
+
+---tokens---
+'<?php'       Comment.Preproc
+'\n'          Text
+
+'$pipe'       Name.Variable
+' '           Text
+'='           Operator
+' '           Text
+'popen'       Name.Builtin
+'('           Punctuation
+' '           Text
+'"'           Literal.String.Double
+'flamegraph.pl --title=' Literal.String.Double
+'\\"'         Literal.String.Escape
+'$title'      Literal.String.Interpol
+'\\"'         Literal.String.Escape
+' > /var/www/html/w/docs/flamegraph.svg' Literal.String.Double
+'"'           Literal.String.Double
+','           Punctuation
+' '           Text
+"'w'"         Literal.String.Single
+' '           Text
+');'          Punctuation
+'\n'          Text
